--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "nodemon --max-old-space-size=2048 app.js --harmony_async_await"
+    "start": "tsc && node dist/app.ts",
+    "dev": "nodemon --watch src/**/* -e ts,tsx --exec ts-node ./src/app.ts",
+    "build": "tsc"
   },
   "keywords": [
     "koa",
@@ -18,6 +19,15 @@
     "koa": "^2.13.1"
   },
   "devDependencies": {
+    "@types/ejs": "^3.1.0",
+    "@types/eslint": "^8.4.1",
+    "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.6",
+    "@types/koa-router": "^7.4.4",
+    "@types/koa-static": "^4.0.2",
+    "@types/mysql": "^2.15.21",
+    "@types/node": "^17.0.21",
+    "@types/puppeteer": "^5.4.5",
     "ejs": "3.1.6",
     "eslint": "^8.3.0",
     "koa-body": "4.2.0",
@@ -25,6 +35,9 @@
     "koa-router": "^10.0.0",
     "koa-static": "^5.0.0",
     "mysql": "^2.16.0",
-    "puppeteer": "13.0.0"
+    "nodemon": "^2.0.15",
+    "puppeteer": "^13.0.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.2"
   }
 }
