--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "devtool-service",
   "version": "1.0.0",
   "description": "代码生成",
-  "main": "index.js",
+  "main": "app.js",
+  "author": {
+    "name": "iMaldway",
+    "email": "iMaldway@qq.com"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/app.ts",
@@ -11,12 +15,21 @@
   },
   "keywords": [
     "koa",
-    "async"
+    "ejs",
+    "puppeteer",
+    "mysql",
+    "code generation"
   ],
-  "author": "Maldway",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.13.1"
+    "koa": "^2.13.1",
+    "koa-body": "4.2.0",
+    "koa-bodyparser": "4.3.0",
+    "koa-router": "^10.0.0",
+    "koa-static": "^5.0.0",
+    "mysql": "^2.16.0",
+    "ejs": "3.1.6",
+    "puppeteer": "^13.0.0"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.0",
@@ -28,15 +41,8 @@
     "@types/mysql": "^2.15.21",
     "@types/node": "^17.0.21",
     "@types/puppeteer": "^5.4.5",
-    "ejs": "3.1.6",
     "eslint": "^8.3.0",
-    "koa-body": "4.2.0",
-    "koa-bodyparser": "4.3.0",
-    "koa-router": "^10.0.0",
-    "koa-static": "^5.0.0",
-    "mysql": "^2.16.0",
     "nodemon": "^2.0.15",
-    "puppeteer": "^13.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
   }
