--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node dist/app.ts",
-    "dev": "nodemon --watch src/**/* -e ts,tsx --exec ts-node ./src/app.ts",
+    "serve": "nodemon --watch src/**/* -e ts,tsx --exec ts-node ./src/app.ts",
     "build": "tsc"
   },
   "keywords": [
