--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc && node dist/app.ts",
+    "start": "tsc && node dist/app.js",
     "serve": "nodemon --watch src/**/* -e ts,tsx --exec ts-node ./src/app.ts",
     "build": "tsc"
   },
